dvdreadsrc: fix handling of multi-angle streams

We would output all angles interleaved instead of just
the selected angle.

https://bugzilla.gnome.org/show_bug.cgi?id=539254